welcome.lessons.welcome.bat.bool1.SleepIn.scala.error
sleepIn:2: error: identifier expected but 'true' found.
	if (vacation:Boolean==true) { 
                              ^sleepIn:8: error: ')' expected but '}' found.
}
^