welcome.lessons.welcome.bat.bool1.SleepIn.scala.code
def sleepIn(weekday:Boolean, vacation:Boolean): Boolean = {
	if (vacation:Boolean==true) { 
		return true
	} if (weekday:Boolean&vacation:Boolean== false){
		return false
	} 
	
}
